--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/freddycarias/react-fr-shop#readme",
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.19.6",
+    "axios": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3"
